Completed the calculate score method with different conditions to either give no points or increment the total score based on connection length.